deploy-brice/podinfo-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: florent-brice
  namespace: dev
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: florent-brice
  template:
    metadata:
      labels:
        app: florent-brice
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: florent-brice
        image: quay.io/brice/metrics-demo:master
        command:
        - sh
        - -c
        - "sed -ibak 's/mighty-fine/whisky/g' *.json && sed -ibak 's/mighty-fine/whisky/g' *.js && npm start"
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
