deploy-brice/podinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  creationTimestamp: null
  name: florent-brice
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: florent-brice
          servicePort: 3000
        path: /whisky
status:
  loadBalancer: {}
